--- a/ldawebshop/package.json
+++ b/ldawebshop/package.json
@@ -9,7 +9,7 @@
   "test": "react-scripts test",
   "eject": "react-scripts eject",
   "predeploy": "npm run build",
-  "deploy": "gh-pages -d dist"
+  "deploy": "gh-pages -d build"
 },
 "homepage": "https://laicaasauro.github.io/ldawebshop",
   "dependencies": {
