--- a/ldawebshop/package.json
+++ b/ldawebshop/package.json
@@ -6,8 +6,6 @@
   "scripts": {
   "start": "react-scripts start",
   "build": "react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject",
   "predeploy": "npm run build",
   "deploy": "gh-pages -d build"
 },
@@ -22,13 +20,10 @@
     "@eslint/js": "^9.39.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.24",
     "gh-pages": "^6.3.0",
-    "globals": "^16.5.0",
-    "vite": "^7.3.1"
+    "globals": "^16.5.0"
   },
   "browserslist": {
     "production": [
